feat: update ticket with control
